# struct2prose

./: .gitignore  README.md  pyproject.toml
clean_data/: Datenbanken.htm  Datenbanken.json  Doc-Gen.htm  Doc-Gen.json  Konfigurationsübersicht.htm  Konfigurationsübersicht.json  Logging.htm  Logging.json  Polycom-Videokonferenzsysteme.htm  Polycom-Videokonferenzsysteme.json  Update_6.0.htm  Update_6.0.json
contextualized_data/: Datenbanken.contextualized.json  Datenbanken.md  Doc-Gen.contextualized.json  Doc-Gen.md  Konfigurationsübersicht.contextualized.json  Konfigurationsübersicht.md  Logging.contextualized.json  Logging.md  Polycom-Videokonferenzsysteme.contextualized.json  Polycom-Videokonferenzsysteme.md  Update_6.0.contextualized.json  Update_6.0.md
contextualized_data_bk/: Datenbanken.contextualized.json  Doc-Gen.contextualized.json  Doc-Gen.md  Konfigurationsübersicht.contextualized.json  Konfigurationsübersicht.md  Logging.contextualized.json  Logging.md  Polycom-Videokonferenzsysteme.contextualized.json  Polycom-Videokonferenzsysteme.md  Update_6.0.contextualized.json  Update_6.0.md
normalized_data/: Doc-Gen.md  Konfigurationsübersicht.md  Logging.md  Polycom-Videokonferenzsysteme.md  Update_6.0.md
processed_data/: Datenbanken.json  Doc-Gen.json  Konfigurationsübersicht.json  Logging.json  Polycom-Videokonferenzsysteme.json  Update_6.0.json
raw_data/: Datenbanken.htm  Doc-Gen.htm  Konfigurationsübersicht.htm  Update_6.0.htm
raw_data_bk/: Logging.htm  Polycom-Videokonferenzsysteme.htm
state/: struct2prose.db
stripped_data/: Datenbanken.json  (+5 more)
(+27 files in other folders)
