[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "struct2prose"
version = "0.1.0"
dependencies = [
	"beautifulsoup4",
	"requests",
	"groq",	
	"lxml",
	"python-dotenv"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
